admin: vehicles table improved; hydra prod deployment
